--- a/templates/feed.html
+++ b/templates/feed.html
@@ -12,3 +12,12 @@ Login
         <h1>You need to login</h1>
     {% endif %}
 {% endblock %}
+
+{% block content %}
+    <ul>
+        {% for article in articles %}
+        <li>article
+        </li>
+        {% endfor %}
+    </ul>
+{% endblock %}
